style: fix msm title margin top on mobile

--- a/src/styles/projects/msm.scss
+++ b/src/styles/projects/msm.scss
@@ -79,4 +79,10 @@
             gap: 8px;
         }
     }
+
+    @media (max-width: 768px) {
+        h1 {
+            margin-top: 78px;
+        }
+    }
 }
